# codex-speed-doctor

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
design/: figma-brief.md
docs/: ROADMAP.md  SAFETY.md  TROUBLESHOOTING.md  index.html
graphify-out/: GRAPH_REPORT.md  graph.json
src/codex_speed_doctor/: __init__.py  archive.py  cli.py  defer_archive.py
tests/: test_archive.py  test_cli.py
