[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-speed-doctor"
version = "0.1.0"
description = "Privacy-first diagnostics for slow Codex Desktop or CLI startup."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Anita" }
]
keywords = ["codex", "openai", "diagnostics", "cli", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: System :: Monitoring",
]

[project.scripts]
codex-speed-doctor = "codex_speed_doctor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
